Variables partial with gradients

--- a/source/_assets/sass/_blog.scss
+++ b/source/_assets/sass/_blog.scss
@@ -2,3 +2,10 @@
 .site-logo {
   font-family: 'Alfa Slab One', cursive;
 }
+
+footer {
+  background-image: $gradient-linear-grey-dark;
+  ul {
+    list-style: none;
+  }
+}
