Tweaks to Blog index

--- a/source/_assets/sass/_base.scss
+++ b/source/_assets/sass/_base.scss
@@ -89,7 +89,7 @@ h6 {
 
 hr {
     @apply .border-b;
-    @apply .border-blue-lighter;
+    @apply .border-pink-lighter;
     @apply .my-12;
     @apply .rounded-full;
 }
