Use (dark) Monokai theme for highlight.hs

--- a/source/_assets/sass/_base.scss
+++ b/source/_assets/sass/_base.scss
@@ -115,7 +115,7 @@ p {
 }
 
 pre {
-    @apply .bg-grey-lighter;
+    @apply .bg-black;
     @apply .leading-loose;
     @apply .my-6;
     @apply .overflow-x-auto;
