Increase code block text size

--- a/source/_assets/sass/_base.scss
+++ b/source/_assets/sass/_base.scss
@@ -27,7 +27,7 @@ code {
     @apply .px-2;
     @apply .py-px;
     @apply .rounded;
-    @apply .text-sm;
+    //@apply .text-sm;
 }
 
 code.hljs {
